cmake_minimum_required(VERSION 4.0)
project(datastruct2 C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(01_LinearStruct)
add_subdirectory(02_TreeStruct)
add_subdirectory(03_GraphStruct)
add_subdirectory(04_Sort)
add_subdirectory(05_Search)
add_subdirectory(06_DP)
add_subdirectory(07_Floyd)
add_subdirectory(08_KMP)