add_executable(01_ArrayList 01_ArrayList/main.c 01_ArrayList/arrayList.c 01_ArrayList/arrayList.h)

add_executable(02_LinkList 02_LinkList/main.c 02_LinkList/LinkList.c 02_LinkList/LinkList.h)

add_executable(03_LinkLoop 03_LinkLoop/main.c 03_LinkLoop/LinkLoop.c 03_LinkLoop/LinkLoop.h 03_LinkLoop 03_LinkLoop/joseph.c 03_LinkLoop/joseph.h)

add_executable(04_Double 04_DoubleLoopLink/main.c 04_DoubleLoopLink/doubleLoopLink.c 04_DoubleLoopLink/doubleLoopLink.h)

add_executable(05_Stack 05_Stack/main.c 05_Stack/arrayStack.c 05_Stack/arrayStack.h 05_Stack/LinkStack.c 05_Stack/LinkStack.h)

add_executable(06_Queue 06_Queue/main.c 06_Queue/arrayQueue.c 06_Queue/arrayQueue.h 06_Queue/LinkQueue.c 06_Queue/LinkQueue.h)